docroot/sites/default/themes/maxim_base/css/global.css
/* ... */
/* top header zone */
#zone-header { padding:20px 5px; background: url(../images/header_top_bkg.png) repeat-x #EBEBEB; }
#region-header-first { margin-right:5px; }
#region-header-second { margin-left:0; }

/* main content */
#zone-content, #zone-wide-feature { background-color:#FFF; }
#zone-content { padding-top:25px; }

/* content teaser */
.content-teaser { display:block; margin-bottom:50px; }
.content-teaser .teaser-image { position:relative; float:left; display:block; margin-right:10px; margin-bottom:10px; }
.content-teaser .teaser-image .icon-overlay { position:absolute; width:36px; height:33px; top:0; right:0; }
.content-teaser.Slideshow .teaser-image .icon-overlay { background:url(../images/icon_slideshow.png) no-repeat;  }
.content-teaser.Video .teaser-image .icon-overlay { background:url(../images/icon_video_play.png) no-repeat;  }
.content-teaser .teaser-image.field-content { width:auto; height:auto; }

.content-teaser h1 a { font-size:2.1em; line-height: 1.2em; }
.content-teaser h2 a { font-size: 1.4em; color:#0074a4; line-height: 1em; text-transform:uppercase; }
.content-teaser .teaser-body { float:left; display:block; margin-top:5px; font-size:1.6em; width:230px; line-height: 1.2em; }

/*content zone*/
#boxes-box-magazine_subscription_link, #boxes-box-uk_channel_link, #boxes-box-top_link_uk_channel { font-size: 16px; }
#boxes-box-magazine_subscription_link a, #boxes-box-uk_channel_link a, #boxes-box-top_link_uk_channel a { color: #0074A4; }

/* feature teaser */
.content-feature h1 { font-size:3.2em; line-height:1em; margin-top:5px; }
.content-feature { border-bottom:8px solid #E8E8E8; margin-bottom:16px; padding-bottom:14px; }
.content-feature .feature-body { font-size:1.6em; }

/* middle sidebar */
#region-sidebar-first { background-color: #C1DFEF; border:1px solid #008cc7; margin:0; }
#region-sidebar-first .block-views { text-align:center; }
#region-sidebar-first .block-inner { padding:15px 10px; padding-bottom:0; }
#region-sidebar-first .block-inner h2.block-title { text-align: center; }
#region-sidebar-first .block-inner h2.block-title a { color:#008CC7; font-weight:bold; font-size:16px; text-transform:uppercase; line-height:1em; white-space: nowrap; }
#region-sidebar-first .more-link { text-align:center; margin-bottom:10px; }
#region-sidebar-first .more-link a { font-size:1.3em; color:#0074A4; line-height:1em; }

#region-sidebar-first .block-home-page-watchlist .block-inner { padding:0; }
#region-sidebar-first .block-home-page-watchlist .block-inner h2.block-title { background-color: #008cc7; color: white; text-transform: uppercase; font-size:20px; font-family: ronnia; font-weight: 600; padding-top:2px; }
#region-sidebar-first .block-home-page-watchlist .block-inner h2.block-title img { vertical-align: middle; margin-bottom: 5px; }
#region-sidebar-first .block-home-page-watchlist .block-inner .view-content { padding:0 10px; }
#region-sidebar-first .block-home-page-watchlist .block-inner .sidebar-list { margin-top:10px; }
#region-sidebar-first .block-home-page-watchlist .block-inner .view-footer hr { width:90%; color:#EDF5F9; margin:40px auto 10px; }
#region-sidebar-first .block-home-page-promo-block-3 .block-inner .view-footer hr { width:100%; color:#EDF5F9; margin:0; margin-bottom:20px; }

/* sidebar article list */
.sidebar-list { text-align:center; }
.sidebar-list ul { margin-top:0; }
.sidebar-list ul li { margin:6px 0 15px; }
.sidebar-list .teaser-title { margin-top:6px; }
.sidebar-list .teaser-title a { font-size:1.4em; line-height:1.1em; font-family: ronnia; color: #3A5B6D; font-weight: 400;  }

#region-sidebar-first #block-views-polls-block .block-inner { background: #E9F9FF; border-color: #008CC7;}
#region-sidebar-first #block-views-polls-block .block-inner h2.block-title a { color:#008DC8; }
#region-sidebar-first #block-views-polls-block .view-polls { margin-top:5px; }
#region-sidebar-first #block-views-polls-block .view-polls h2.node-title { font-size:1.4em; font-weight:bold; line-height:1em; margin-bottom:6px; }
#region-sidebar-first #block-views-polls-block .view-polls h2.node-title a { color:#000; line-height:1.3em;  }
#region-sidebar-first #block-views-polls-block .view-polls .choices { text-align:left; margin-left:10px; }
#region-sidebar-first #block-views-polls-block .view-polls .form-type-radio { margin:0; line-height:1.4em;  }
#region-sidebar-first #block-views-polls-block .view-polls label.option { font-size:1.0em;  }
#region-sidebar-first #block-views-polls-block .view-polls .more-link { margin:8px 0; text-align:center; }

#featuredSections .featuredBlock { margin-top:20px; }
#featuredSections .featuredBlock .featuredTop { width:140px; height:5px;  }
#featuredSections .featuredBlock .featuredMid { width:140px; padding:10px; }
#featuredSections .featuredBlock .featuredBottom { width:140px; height:7px; }

#featuredSections .featuredBlock.first h1, #featuredSections .featuredBlock.first .more a {color:#008dc8; }
#featuredSections .featuredBlock.first .featuredTop { background:url(../images/featuredcol_top_blue.png) no-repeat; }
#featuredSections .featuredBlock.first .featuredMid { background:url(../images/featuredcol_mid_blue.png) repeat-y;  }
#featuredSections .featuredBlock.first .featuredBottom { background:url(../images/featuredcol_bottom_blue.png) no-repeat; }

#featuredSections .featuredBlock.third h1, #featuredSections .featuredBlock.third .more a  {color:#BE4C1E; }
#featuredSections .featuredBlock.third .featuredTop { background:url(../images/featuredcol_top_brown.png) no-repeat; }
#featuredSections .featuredBlock.third .featuredMid { background:url(../images/featuredcol_mid_brown.png) repeat-y; }
#featuredSections .featuredBlock.third .featuredBottom { background:url(../images/featuredcol_bottom_brown.png) no-repeat; }
#featuredSections .featuredBlock .poll { margin:5px; }
#featuredSections .featuredBlock .poll h3 { font-size:1.4em; font-weight:bold; }
/* ... */

